--- a/LeetCode題庫_C++_503.Next_Greater_Element_II/.vscode/settings.json
+++ b/LeetCode題庫_C++_503.Next_Greater_Element_II/.vscode/settings.json
@@ -1,6 +1,11 @@
 {
     "files.associations": {
         "stack": "cpp",
-        "utility": "cpp"
+        "utility": "cpp",
+        "vector": "cpp",
+        "deque": "cpp",
+        "initializer_list": "cpp",
+        "xstring": "cpp",
+        "xutility": "cpp"
     }
 }
